# hexdump

./: README.md  pyproject.toml
src/hexdump/: __init__.py  _coerce.py  _format.py  _parse.py  _render.py  errors.py
tests/: test_coerce.py  test_errors.py  test_parse.py  test_render.py  test_roundtrip.py
