[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexdump"
version = "1.0.0"
description = "Format bytes as classic hexdump output with offsets, hex columns, and an ASCII gutter — and parse hexdump text back to bytes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Nripanka Das", email = "nripankadas@gmail.com"}]
keywords = ["hexdump","hex","bytes","dump","binary","xxd","od","debugging","formatter","zero-dependency"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage = "https://github.com/nripankadas07/hexdump"
Repository = "https://github.com/nripankadas07/hexdump"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hexdump = ["py.typed"]
